# SpaMo-PJM

./: .gitignore  main.py  pyproject.toml
crop_params/crop_params.lmdb/: lock.mdb
dataset/: p14t.py
scripts/: mae_extract_feature.py  mae_features_for_pjm.py  pjm_vit_extract.py  vit_extract_feature.py  vit_features_for_pjm.py
spamo/: asb.py  callbacks.py  mm_projector.py  t5_slt.py  tconv.py
utils/: helpers.py
utils/pjm/: preprocessing.py
