[project]
name = "spamo-pjm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.4.0",
    "av>=16.0.1",
    "datasets>=4.4.1",
    "einops==0.8.1",
    "einops-exts==0.0.4",
    "expecttest==0.2.1",
    "hypothesis==6.115.5",
    "identify==2.6.9",
    "lightning==1.9.5",
    "lightning-cloud==0.5.70",
    "lightning-utilities==0.14.0",
    "lmdb>=1.7.5",
    "msgpack>=1.1.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "peft==0.7.1",
    "pillow>=12.0.0",
    "portalocker==3.1.1",
    "pytorch-lightning==1.9.5",
    "rouge-score>=0.1.2",
    "sacrebleu==2.2.0",
    "sentry-sdk==2.22.0",
    "setproctitle==1.3.5",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "wandb==0.16.0",
]
